[gd_scene load_steps=8 format=3 uid="uid://cjst7xfrt2nqq"]

[ext_resource type="Script" uid="uid://bbodi52e5h54o" path="res://Wolf/wolf.gd" id="1_dlc5l"]
[ext_resource type="PackedScene" uid="uid://cl7su6v8jg3jm" path="res://models/werewolf.tscn" id="2_38o6x"]
[ext_resource type="AudioStream" uid="uid://ncghap4c1tp6" path="res://kill enemy 1.wav" id="3_o1ixa"]
[ext_resource type="AudioStream" uid="uid://cn3rjb11i8tr8" path="res://hit enemy 1.wav" id="4_ygiko"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dlc5l"]
radius = 0.7
height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_38o6x"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 2.26

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_se4sg"]
albedo_color = Color(0, 0, 0, 1)

[node name="Wolf" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_dlc5l")
reaction_time = 2.0
attack_duration = 0.75
death_despawn_time = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75051, 0.215114)
shape = SubResource("CapsuleShape3D_dlc5l")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Target Timer" type="Timer" parent="."]
autostart = true

[node name="Death Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Attack Timer" type="Timer" parent="."]

[node name="werewolf" parent="." instance=ExtResource("2_38o6x")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, 0, 0)

[node name="Skeleton3D" parent="werewolf/metarig" index="0"]
bones/1/rotation = Quaternion(0.150971, 0, 0, 0.988538)
bones/6/rotation = Quaternion(-0.286058, 0, 0, 0.958212)

[node name="Head" parent="werewolf/metarig/Skeleton3D" index="0"]
transform = Transform3D(0.337936, 0, 0, 0, 0.00923657, -0.326119, 0, 0.337809, 0.00891692, 0, 2.1814, 0.14894)

[node name="Glowing Eye" parent="werewolf/metarig/Skeleton3D" index="1"]
transform = Transform3D(0.0470209, 0, 0, 0, 0.035038, -0.00039692, 0, -0.000958027, -0.0145166, 0, 1.86953, 0.370945)

[node name="Glowing Eye" parent="werewolf/metarig/Skeleton3D/Glowing Eye" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_38o6x")

[node name="Glowing Eye_001" parent="werewolf/metarig/Skeleton3D" index="2"]
transform = Transform3D(0.0470209, 0, 0, 0, 0.035038, -0.00039692, 0, -0.000958027, -0.0145166, -0.211952, 1.86953, 0.370945)

[node name="Glowing Eye_001" parent="werewolf/metarig/Skeleton3D/Glowing Eye_001" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_38o6x")

[node name="Weapon" parent="werewolf/metarig/Skeleton3D" index="3"]
transform = Transform3D(0.0267926, -0.00501081, 0.0282809, 0.0280567, 0.0172743, -0.0219199, -0.00980328, 0.0357438, 0.0145581, -0.704906, 0.971941, 0.113621)

[node name="Weapon" parent="werewolf/metarig/Skeleton3D/Weapon" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_se4sg")

[node name="Die SFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_o1ixa")
volume_db = 4.571

[node name="Hurt SFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_ygiko")
volume_db = 4.571

[connection signal="timeout" from="Target Timer" to="." method="_on_target_timer_timeout"]
[connection signal="timeout" from="Death Timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Attack Timer" to="." method="_on_attack_timer_timeout"]

[editable path="werewolf"]
